
	* src/acl.erl (match_acl/3): Use string() version of
	User/Server/Resource to match an ACL.

	* src/cyrsasl.erl: Return invalid-mechanism when a mechanism isn't
	supported instead of no-mechanism, which wasn't standard-compliant.

	* src/mod_pubsub/nodetree_virtual.erl (create_node/5): Use string()
	version of UserName and UserHost.

2009-01-19  Pablo Polvorin  <pablo.polvorin@process-one.net>

	* src/cyrsasl_digest.erl: Typo (prolists -> proplists).

2009-01-19  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/cyrsasl_digest.erl: Replace hijacked usage of xml:get_attr_s/2
	by proper calls to proplists:get_value/3. Replace a call to
	stringprep:tolower/1 by exmpp_stringprep:to_lower/1.

	* src/ejabberd_service.erl: Replace a call to xml:crypt/1 by
	exmpp_xml:escape_using_entities/1.

2009-01-19  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	Merge from trunk (r1804 to r1829).

2009-01-19  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	Merge from trunk (r1752 to r1804).

	Note: this merge doesn't include the following revisions because it
	was made by previous commits:
	    r1766, r1768, r1781, r1783, r1794, r1797, r1799, r1802.

2009-01-19  Pablo Polvorin  <pablo.polvorin@process-one.net>

	* src/translate.erl: Bugfix, ?MYLANG macro returns a list().

2009-01-19  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/ejabberd_auth_anonymous.erl: Fix accesses to the new #jid opaque
	type.

2009-01-17  Mickael Remond  <mremond@process-one.net>

	* src/ejabberd_c2s.erl: Added comments.

2009-01-16  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	Merge from trunk (r1734 to r1752).

	Note: this merge doesn't include the following revisions because it
	was made by previous commits:
	    r1737, r1740, r1745, r1747, r1748.

	* src/jlib.hrl: Any deprecated content was removed from jlib.hrl. This
	leaves only the new RSM records.

2009-01-16  Badlop  <badlop@process-one.net>

	* src/mod_privacy.erl: Privacy list items must be processed in the